Closed Bug 157918 Opened 22 years ago Closed 22 years ago

Frameset frames with a frame hang when "Each frame separately"

Categories

(Core :: Printing: Output, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: michael_shtein, Assigned: rods)

References

()

Details

(Keywords: hang, Whiteboard: [ADT2 RTM] [ETA 07/26])

Attachments

(3 files, 5 obsolete files)

Printing html page with option "Print each frame separately" when the frames
are at the tree-like order causes to Mozilla hang(we still may click Cancel
on the Print Progress dialog, but it doesn't solve the problem).

Attached is the test case - 5 html pages, in order to reproduce the problem
open at the browser file root.htm and try to print it - Mozilla will enter 
to the infinite loop printing this page.
Attached file testcase (obsolete) —
Attached file testcase (continue) (obsolete) —
Attached file testcase(continue) (obsolete) —
Attached file testcase(continue) (obsolete) —
Attached file testcase(end) (obsolete) —
Attachment #91649 - Attachment is obsolete: true
Attachment #91651 - Attachment is obsolete: true
Attachment #91652 - Attachment is obsolete: true
Attachment #91653 - Attachment is obsolete: true
Attachment #91654 - Attachment is obsolete: true
To open attachment please do the following:
gzip -dc 'filename' | tar xf -
Could you just "zip" it up for me?
Attached file zip file
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: nsbeta1
Summary: Printing html page with option "Each frame separately" hangs Mozilla → Frameset frames with a frame hang when "Each frame separately"
Whiteboard: [RTM2]
Target Milestone: --- → mozilla1.1alpha
Adding hang. Printing hangs after this page is printed. I can not print again
until I restart Mozilla. I can't even kill the print job directly through the
control panel.
Keywords: nsbeta1hang, nsbeta1+
Changing platform to All. I see this under WinXP using a current branch build.
OS: Solaris → All
Hardware: Sun → All
Priority: -- → P1
Target Milestone: mozilla1.1alpha → mozilla1.0.1
Blocks: 143047
Whiteboard: [RTM2] → [ADT2 RTM] [ETA 07/19]
Attached patch patchSplinter Review
This patch adds a method for walking the PO tree and checks to see if the aPO
is
an eFrame and has children that are eFrames. If so, then this means the parent
eFrame is actually an eFrameSet and we should change. This gets incorrectly set
to an eFrame because the content node in the parent document is actually frame.


Also note: we only want to call this we are printing "Each Frame Separately"
when printing "As Is" leave it as an eFrame.

This is a low risk patch, because it is only executed when framesets are being
printed and when printing "Each Frame Separately"
Comment on attachment 91747 [details] [diff] [review]
patch

r=dcone
Attachment #91747 - Flags: review+
Comment on attachment 91747 [details] [diff] [review]
patch

sr=kin@netscape.com

That comment was a little hard to parse for my brain ... rod said he'll rewrite
it the way he explained it to me.
Attachment #91747 - Flags: superreview+
Comment on attachment 91747 [details] [diff] [review]
patch

a=scc for checkin to the mozilla trunk
Attachment #91747 - Flags: approval+
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
sujay: can you verify this as fixed on the trunk? thanks!
Whiteboard: [ADT2 RTM] [ETA 07/19] → [ADT2 RTM] [ETA 07/23]
verified in 7/22 trunk build. 

Michael, can you also verify this one just to double-check ?

thanks..
Status: RESOLVED → VERIFIED
*** Bug 158873 has been marked as a duplicate of this bug. ***
Approved for 1.0 branch; change mozilla1.0.1+ to fixed1.0.1 when fixed.
adt1.0.1+ (on ADT's behalf ) approval for checkin to the 1.0 branch, pending
Drivers' approval. pls check this in asap, then replace "mozilla1.0.1+" with
"fixed1.0.1".
Whiteboard: [ADT2 RTM] [ETA 07/23] → [ADT2 RTM] [ETA 07/26]
Checked in fix to the 1.0 branch.
Keywords: mozilla1.0.1fixed1.0.1
The patch indeed fixes the problem. Thanks.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: