When a FrameSet Frame's contains a FrameSet the mFrameType for the PrintObject is always set to an eFrame. Which is fine when printing "AsIs" but is incorrect when when printing "Each Frame Separately". When printing "Each Frame Separately" the Frame really acts like a frameset. So we need to set it to an eFrame Bug 157918 r=dcone sr=kin a=scc